# clitoris

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  index.md
_layouts/: project.html
build-aux/: Makefile.am  git-version-gen
info/: Makefile.am  author.h2m
m4/: sxe-compiler.m4
src/: Makefile.am  clitoris.am  clitoris.c  clitoris.ggo  clitoris.yuck  hxdiff.c  hxdiff.yuck  shack.c  version.c.in  version.h
test/: Makefile.am  diff_01.clit  diff_02.clit  diff_03.clit  diff_04.clit  early_01.clit  early_02.clit  empty_01.clit  empty_02.clit  empty_03.clit  exit_code_01.clit  exit_code_02.clit  expand_01.clit  expand_02.clit  expand_03.clit  expand_04.clit  hxdiff_01.clit  hxdiff_02.clit  hxdiff_03.clit  hxdiff_04.clit  hxdiff_05.clit  ignore_01.clit  ignore_02.clit  ignore_03.clit  ignore_04.clit  ignore_05.clit  ignore_06.clit  keep-going_01.clit  keep-going_02.clit  negexp_01.clit  negexp_02.clit  negexp_03.clit  negexp_04.clit  negexp_05.clit  negexp_06.clit  out-in-file_01.clit  out-in-file_02.clit  redir_01.clit  redir_02.clit  redir_03.clit  (+19 more)
